apps/default/css/style.css
@import url(http://fonts.googleapis.com/css?family=Jura);
@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,500);


@font-face{ 
font-family: 'WebSymbolsRegular';
src: url('../fonts/websymbols-regular-webfont.eot');
src: url('../fonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
url('../fonts/websymbols-regular-webfont.woff') format('woff'),
url('../fonts/websymbols-regular-webfont.ttf') format('truetype'),
url('../fonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
}

.icon {
	font-family: 'WebSymbolsRegular';
	display: inline-table;
	vertical-align: top;
	cursor: move;
}

/* general elements */

* {
font-family: 'Jura', sans-serif;
}

* b, * strong {
font-family: 'Ubuntu', sans-serif;
}

body {
	margin: 0;
	padding: 0;
	overflow:hidden;
	background-color: #444;
}

img {
	border:0;
}

ul, li {
	margin: 0;
	padding: 0;
	list-style: none;
}


input, textarea, select {
	outline: none;
	border:0;
	background: transparent;
	padding: 0;
}

/* rr + menu */

header {
width:100%;
height:50px;
background: #76CF90;
color:#fff;
border-bottom: 1px solid #529C68;
}

header ul, header li {
margin: 0;
padding: 0;
list-style: none;
}

h1 {
	color:#000;
	display: inline;
	vertical-align: top;
	font-size: 14px;
	font-weight: 100;
	margin-top: 16px;
	float: right;
	margin-right: 20px;
	text-transform: uppercase;
	letter-spacing: 4px;
}

h1 img#loading-indicator {
display: inline;
float: left;
margin: -3px 10px 0 0;
height: 24px;
display: none;
}

h1 b {
font-weight: 500;
padding-top: -15px;
margin: 0;
}

.logout {
cursor: pointer;
border-bottom: 2px solid transparent;
}

.logout:hover {
border-color: #000;
}

nav {
	display: inline;
}

nav ul {
	display: inline-table;
	vertical-align: top;
	height:50px;
}

nav ul li {
	display: inline-table;
	color:#222;
	font-size: 14px;
	cursor: pointer;
	text-shadow: 0 0 2px #fff;
	padding:16px 16px 14px 16px;
	letter-spacing: 3px;
	height:100%;
	border-right: 1px solid #529C68;
}

nav ul li:last-child {
/* border-right: 0; */
}

nav ul li:hover {
background: rgba(255,255,255,.3);
}

nav ul li.current {
color:#000;
background: rgba(255,255,255,.5);
}

/* content */

#content-wrapper {
	overflow:hidden;
}

#content {
	width:4000px;
}

#content .section {
	display: inline-table;
	float: left;
	vertical-align: top;
	background: #F9F9F9
/* 	background: rgba(243, 243, 217, 1); */
}

#content .section-container {
	border-right: 1px solid #ddd;
}

#content .section .footer {
	height:30px;
background: rgb(68,68,68); /* Old browsers */
background: -moz-linear-gradient(top, rgba(68,68,68,1) 0%, rgba(68,68,68,1) 0%, rgba(51,51,51,1) 49%, rgba(42,42,42,1) 51%, rgba(0,0,0,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(68,68,68,1)), color-stop(0%,rgba(68,68,68,1)), color-stop(49%,rgba(51,51,51,1)), color-stop(51%,rgba(42,42,42,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, rgba(68,68,68,1) 0%,rgba(68,68,68,1) 0%,rgba(51,51,51,1) 49%,rgba(42,42,42,1) 51%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, rgba(68,68,68,1) 0%,rgba(68,68,68,1) 0%,rgba(51,51,51,1) 49%,rgba(42,42,42,1) 51%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top, rgba(68,68,68,1) 0%,rgba(68,68,68,1) 0%,rgba(51,51,51,1) 49%,rgba(42,42,42,1) 51%,rgba(0,0,0,1) 100%); /* IE10+ */
background: linear-gradient(to bottom, rgba(68,68,68,1) 0%,rgba(68,68,68,1) 0%,rgba(51,51,51,1) 49%,rgba(42,42,42,1) 51%,rgba(0,0,0,1) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
	border-top: 1px solid #000;
	padding-left: 5px;
}

#content .section .footer .menu .button {
	margin: 4px 10px 0 5px;
	display: inline-table;
	float: left;
	width:20px;
	height:20px;
	cursor: pointer;
}

#content .section .footer .menu .button-save {
	background-image: url(../img/icons_save.png);
}

#content .section .footer .menu .button-save:hover {
	background-image: url(../img/icons_hover_save.png);
}

#content .section .footer .menu .button-folder {
	background-image: url(../img/icons_folder.png);
}

#content .section .footer .menu .button-folder:hover {
	background-image: url(../img/icons_hover_folder.png);
}

#content .section .footer .menu .button-delete {
	background-image: url(../img/icons_delete.png);
	float: right;
	margin-right: 15px;
}

#content .section .footer .menu .button-delete:hover {
	background-image: url(../img/icons_hover_delete.png);
}

#content .section .footer .menu .button-createdoc {
	background-image: url(../img/icons_document_create.png);
}

#content .section .footer .menu .button-createdoc:hover {
	background-image: url(../img/icons_hover_document_create.png);
}
#content .section .footer .menu .button-create {
	background-image: url(../img/icons_create.png);
}

#content .section .footer .menu .button-create:hover {
	background-image: url(../img/icons_hover_create.png);
}

#content .section .footer .menu .button-settings {
	background-image: url(../img/icons_settings.png);
}

#content .section .footer .menu .button-settings:hover {
	background-image: url(../img/icons_hover_settings.png);
}

#content .section .footer .menu .button .dropdown {
	display: none;
	position: absolute;
	z-index: 999;
	background-color: #fff;
	bottom: 22px;
	box-shadow: 0 0 2px #222;
	margin-bottom: 3px;
}

#content .section .footer .menu .button .dropdown ul li {
padding: 8px 4px;
border-bottom: 1px solid #ddd;
font-size: 12px;
background-color: #fff;
}

#content .section .footer .menu .button .dropdown ul li:hover {
background-color: #eee;

}


#content .section .footer .menu .button:hover .dropdown {
	display: block;
}

/* list */

#content .list {
	overflow-y: none;
	word-wrap: break-word;
}

#content .list ul {
overflow-y: auto;
/* padding: 0 0 0 40px; */
}
/* ... */

